# Antibody-Binding-Tool

./: README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  setup.py
backend/.github/workflows/: ci.yml
backend/src/antibody_binding_api/: __main__.py  main.py
backend/src/antibody_binding_api/crud/: operations.py
backend/src/antibody_binding_api/models/: data_models.py
backend/src/antibody_binding_api/routes/: endpoints.py
backend/src/antibody_binding_api/utils/: antibody_analysis.py  general.py
backend/tests/: test_antibody_analysis.py  test_integration.py
deploy/: deploy.yml  hosts.ini
