[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antibody_analysis_fastapi"
version = "0.1.0"
description = "A FastAPI backend for analyzing antibody binding data"
authors = [
    { name = "Neeli Katti", email = "ngkatti@hotmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "matplotlib",
    "python-multipart",
    "pytest"
]

[project.scripts]
antibody-analysis = "antibody_binding_api.main:app"

[tool.setuptools]
packages = ["antibody_binding_api"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"antibody_binding_api" = ["example_data/*", "temp/*"]

